# python-kube-template

./: .gitignore  Dockerfile  README.md  Tiltfile  alembic.ini  local.env  pyproject.toml
.run/: Debug Server.run.xml
k8s/: kubernetes.yaml
k8s/local/: kubernetes.yaml  pgadmin.yaml  postgres.yaml
spend_api/: local.env  main.py
spend_api/api/: root.py  router.py
spend_api/core/: config.py
spend_api/db/: env.py
spend_api/db/versions/: 86fb404ce77e_add_users_table.py
tests/: test_spend_api.py
