[tool.poetry]
name = "spend-api"
version = "0.1.0"
description = ""
authors = ["Matthew Conniff <mvconniff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
alembic = "^1.7.3"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
pydevd-pycharm = "^213.3714.452"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
